--- a/ErrorsExceptions/SpreadsheetCalculation/project.json
+++ b/ErrorsExceptions/SpreadsheetCalculation/project.json
@@ -14,6 +14,7 @@
   "studioVersion": "20.10.2.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
+    "exceptionHandlerWorkflow": "HandleGlobalErrors.xaml",
     "autoDispose": false,
     "isPausable": true,
     "requiresUserInteraction": true,
